objects/ESC_MilestoneCloseList__c.object
<CustomObject>
    <fields>
        <fullName>ESC_Field_1__c</fullName>
        <label>Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Field_2__c</fullName>
        <label>Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Field_3__c</fullName>
        <label>Field 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_LKP__c</fullName>
        <formula>ESC_ProfileName__c + ESC_Field_1__c + ESC_Field_2__c+ESC_Field_3__c+ESC_Field_4__c+ESC_Field_5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LKP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_MilestoneToClose__c</fullName>
        <label>MilestoneToClose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_ProfileName__c</fullName>
        <label>ProfileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MilestoneCloseList</label>
    <nameField>
        <displayFormat>MLC-{00000}</displayFormat>
        <label>MilestoneCloseList Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MilestoneCloseLists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>